# COFFI

./: .buildinfo  .clang-format  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  README.md  annotated.html  annotated_dup.js  api.html  class_c_o_f_f_i_1_1architecture__provider.html  class_c_o_f_f_i_1_1architecture__provider.js  class_c_o_f_f_i_1_1architecture__provider__inherit__graph.dot  class_c_o_f_f_i_1_1coff__header.html  class_c_o_f_f_i_1_1coff__header__impl.html  class_c_o_f_f_i_1_1coff__header__impl__inherit__graph.dot  class_c_o_f_f_i_1_1coff__header__impl__ti.html  class_c_o_f_f_i_1_1coff__header__impl__ti__inherit__graph.dot  class_c_o_f_f_i_1_1coff__header__impl__tmpl.html  class_c_o_f_f_i_1_1coff__header__impl__tmpl__inherit__graph.dot  class_c_o_f_f_i_1_1coff__header__inherit__graph.dot  class_c_o_f_f_i_1_1coffi.html  class_c_o_f_f_i_1_1coffi.js  class_c_o_f_f_i_1_1coffi__inherit__graph.dot  class_c_o_f_f_i_1_1coffi__strings.html  class_c_o_f_f_i_1_1coffi__strings.js  class_c_o_f_f_i_1_1coffi__strings__inherit__graph.dot  class_c_o_f_f_i_1_1coffi__symbols.html  class_c_o_f_f_i_1_1coffi__symbols.js  class_c_o_f_f_i_1_1coffi__symbols__inherit__graph.dot  class_c_o_f_f_i_1_1coffi_a0803929aba84c459035a72939a3c8265_cgraph.dot  class_c_o_f_f_i_1_1coffi_a0803929aba84c459035a72939a3c8265_icgraph.dot  class_c_o_f_f_i_1_1coffi_a66e384c8159eb8c27280d0ebfa1eb6ca_cgraph.dot  class_c_o_f_f_i_1_1coffi_a66e384c8159eb8c27280d0ebfa1eb6ca_icgraph.dot  class_c_o_f_f_i_1_1directories.html  (+202 more)
.github/workflows/: codeql-analysis.yml  docs.yml
PE/: COMMON.H  COMMON.cpp  CVInfoNew.H  CVSymbols.CPP  DBGDUMP.H  DBGDUMP.cpp  EXEDUMP.H  EXEDUMP.cpp  EXTRNVAR.H  LIBDUMP.H  LIBDUMP.cpp  OBJDUMP.H  OBJDUMP.cpp  PEDUMP.cpp  RomImage.h  coffsymboltable.cpp  coffsymboltable.h  cv_dbg.h  cvexefmt.h  cvinfo.h  cvsymbols.h  pedump.dsp  pedump.sln  pedump.vcproj  resdump.cpp  resdump.h  romimage.cpp  symboltablesupport.cpp  symboltablesupport.h
_static/: custom.css  footer.html
coffi/: coffi.hpp  coffi_directory.hpp  coffi_headers.hpp  coffi_relocation.hpp  coffi_section.hpp  coffi_strings.hpp  coffi_symbols.hpp  coffi_types.hpp  coffi_utils.hpp  coffi_version.hpp
doc/: BYTE _ Microsoft's PE Checksum Algorithm _ microsoft_pe_checksum_algo_distilled.c.htm  Doxyfile  Inside Windows  An In-Depth Look into the Win32 Portable Executable File Format.htm  Peering Inside the PE  A Tour of the Win32 Portable Executable File Format.htm  alias_access.doxyfile  api.md  conf.py  copying.m_o_d  copying.md  examples.md  extdoc.md  get_started.md  index.rst  mainpage.m_o_d  mainpage.md  pecoff_v83.docx  version.doxyfile
doc/Inside Windows  An In-Depth Look into the Win32 Portable Executable File Format_files/: Magazine2-bn1651.css  Msdn10a-bn1651.css  SearchBox.jss  Silverlight-bn1651.js  afr(1).htm  afr(2).htm  afr.htm  broker-config.js  compositejscript3.js  jquery-1.2.6-bn1651.js  ms2.js  mtps-bn1651.css  mtps-bn1651.js  omni_rsid_msdn-bn1651.js  webtrendsscript-bn1651.js
doc/Peering Inside the PE  A Tour of the Win32 Portable Executable File Format_files/: Combined(1).js  Combined.css  Combined.js  FeedbackCounter.css  PrintView.css  SearchBox.jss  broker.js
doc/readthedocs/: conf.py
doc/static/: header.html
docs/: Doxyfile.in  api.md  conf.py  copying.md  extdoc.md  get_started.md  index_.rst  mainpage.md  thanks.txt
example/: Makefile.am
example/COFFDump/: COFFDump.cpp  COFFDump.vcxproj  COFFDump.vcxproj.filters  Makefile.am
examples/: CMakeLists.txt  Makefile.am  Makefile.in
examples/COFFDump/: CMakeLists.txt  COFFDump.cpp  COFFDump.vcxproj  Makefile.in
examples/anonymizer/: CMakeLists.txt  Makefile.in  anonymizer.cpp
examples/tutorial/: CMakeLists.txt  Makefile.in  tutorial.cpp
examples/write_obj/: CMakeLists.txt  Makefile.in  answer.c  answer_test.c  write_obj.cpp
examples/writer/: CMakeLists.txt  Makefile.in  hello.dump  writer.cpp
examples/writer/hello/: hello.asm  hello.sln  hello.vcxproj
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+35 more)
tests/: COFFDump_test.cpp  COFFI.sln  COFFI.vcxproj  COFFI.vcxproj.filters  Makefile.am  coffi_test.cpp  coffi_test.pro  coffio_test.hpp  coffo_test.cpp  configure.ac  examples_test.cpp  make.bat
tests/data/: NikPEViewer.exe.dump  NikPEViewer.exe.dump.expected  anobj.o.dump  anobj.o.dump.expected  answer.c  answer.o.expected  answer_mingw32.exe.expected  answer_mingw32.o.expected  build_file_pe.expected  coffi_test.ob  coffi_test.obj.anonymizer.dump.expected  coffi_test.obj.append.expected  coffi_test.obj.dump  coffi_test.obj.dump.expected  demo.a.dump  demo.a.dump.expected  demo.o.append.expected  demo.o.dump.expected  espui.dll.append.expected  espui.dll.dump  espui.dll.dump.expected  hello.exe.expected  label.exe.dump  label.exe.dump.expected  notepad.exe.dump  notepad.exe.dump.expected  tclsh.dump  tclsh.exe.append.expected  tclsh.exe.dump  tclsh.exe.dump.expected  ti_c2000_1.c  ti_c2000_1.obj.append.expected  ti_c2000_1.obj.dump  ti_c2000_1.obj.dump.expected  ti_c2000_1.out  ti_c2000_1.out.dump  ti_c2000_1.out.dump.expected
tests/src/: coffi_test.cpp
