SUBDIRS = examples

nobase_include_HEADERS =       \
    coffi/coffi.hpp            \
    coffi/coffi_headers.hpp    \
    coffi/coffi_section.hpp    \
    coffi/coffi_types.hpp      \
    coffi/coffi_utils.hpp      \
    coffi/coffi_directory.hpp  \
    coffi/coffi_relocation.hpp \
    coffi/coffi_strings.hpp    \
    coffi/coffi_symbols.hpp
