AC_INIT([COFFI], [1.1])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_FILES([
    Makefile
    examples/Makefile
    examples/anonymizer/Makefile
    examples/COFFDump/Makefile
    examples/tutorial/Makefile
    examples/write_obj/Makefile
    examples/writer/Makefile
])
AC_OUTPUT
